more contrast fixes

--- a/style.css
+++ b/style.css
@@ -439,6 +439,7 @@ nav .caret {
 .mg-md {
     margin-top: 10px;
     margin-bottom: 20px;
+    position: relative;
 }
 
 .mg-lg {
